update home page files to Pilot - jira 308 and 19

--- a/vdct_index.html
+++ b/vdct_index.html
@@ -144,93 +144,113 @@
 
 
     <!--content starts here -->
+
     <div>
-        <div class="row">
-            <h1 property="name" id="wb-cont"> Regulatory Enrolment Process (REP) </h1>
-        </div>
         <div>
-            <div class="row">
-                <h2>REP Form Links (Last updated: January 31, 2020)</h2>
-            </div>
-            <div class="row">
-                <div class="col-md-12 form-group">
-                    <a href="./company/company.html">Company Enrolment (VDD/CTA V4.0) </a>
-                </div>
-            </div>
-            <!--div class="row">
-                <div class="col-md-12 form-group">
-                    <a href="./dossier/dossierEXT-en.html">Dossier Enrolment</a>
-                </div>
-            </div-->
-            <div class="row">
-                <div class="col-md-12 form-group">
-                    <a href="./product/product.html">Product Information Template (VDD/CTA V4.0)</a>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-12 form-group">
-                    <a href="./transaction/regulatory-transaction.html">Regulatory Transaction Template (VDD/CTA V4.0) </a>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-12 form-group">
-                    <p>
-                </div>
-            </div>
-            <!--div class="row">
-                <div class="col-md-12 form-group">
-                    <a href="./oldDossier/dossierEXT-en.html">OLD Dossier Enrolment Template (for viewing old dossier XML only)</a>
-                </div>
-            </div-->
-        </div>
-        <div>
-            <div class="row">
-                <h2>Stylesheet Download Links (Last updated: February 03, 2020)</h2>
-            </div>
-            <div class="row">
-                <div class="col-md-12 form-group">
-                    <a href="./stylesheet/pharmabio_stylesheets_4_0_en.zip">Download V4.0 stylesheet zip file (English version) </a>
-                </div>
-            </div>
-            <!--<div class="row">-->
-                <!--<a href="./stylesheet/pharmabio_stylesheets_en.zip">Download V1.0, V2.0, V3.0 and V4.0 stylesheet zip file (English version) </a>-->
-            <!--</div>-->
-        </div>
 
-        <div>
-            <div class="row">
-                <h2>Training Material Download Links</h2>
-            </div>
-            <div class="row">
-                        <span>
-                            <strong>Note: Please disregard the text displayed when you open the link.  The video will begin when you click play.</strong>
-                        </span>
-            </div>
-            <div class="row">
-                <a href="https://gts-ee.webex.com/recordingservice/sites/gts-ee/recording/playback/3451b4a2954249f6a032de60dc9b3d7c" target="_blank">
-                    REP Video Tutorial #1: Overview </a>
-            </div>
-            <div class="row">
-                <a href="https://gts-ee.webex.com/recordingservice/sites/gts-ee/recording/playback/fb583e58b08a4c78a5dc5685c521f524" target="_blank">
-                    REP Video Tutorial #2: Company Template</a>
-            </div>
-            <div class="row">
-                <a href="https://gts-ee.webex.com/recordingservice/sites/gts-ee/recording/playback/d8af0eb2e7744a77b630982a18fea219" target="_blank">
-                    REP Video Tutorial #3: Dossier ID Request Form</a>
-            </div>
-            <div class="row">
-                <a href="https://gts-ee.webex.com/recordingservice/sites/gts-ee/recording/playback/fcb2ba623a914c689eca4294b1dc50c9" target="_blank">
-                    REP Video Tutorial #4: Regulatory Transaction and Product Information Templates</a>
-            </div>
-        </div>
+            <div>
+                <div class="row">
+                    <h1 property="name" id="wb-cont">Regulatory Enrolment Process (REP) for Veterinary Drugs and Clinical Trials</h1>
+                </div>
+                <div>
+                    <div class="row">
+                        <h2>REP Templates & Form Links</h2>
+                    </div>
+                    <div class="row">
+                        <h2>Outside the Regulatory Transaction Process</h2>
+                    </div>
+                    <div class="row">
+                        <a href="./company/company.html#main">Company Template (VD/CTA V4.0) (2019-10-22)</a>
+                        <ul>
+                            <li>Sent via the CESG as a separate transaction, outside of the regulatory transaction (submission).</li>
+                            <li>Required to obtain a company ID and/or provide updated company information to Health Canada.</li>
+                            <li>Refer to section “2.3 Enrolment Process” and “2.6.2 Folder Structure” of the REP guidance document, and REP Video Tutorial #2 below for detailed descriptions of the requirements for the CO template.</li>
+                        </ul>
+                    </div>
+                    <div class="row">
+                        <a href="https://www.canada.ca/en/health-canada/services/drugs-health-products/drug-products/applications-submissions/guidance-documents/regulatory-enrolment-process/veterinary-dossier-template.html">Dossier ID Request Form for Veterinary Drugs (2020-02-10)</a>
+                        <ul>
+                            <li>Required to obtain a new Dossier ID, or when filing a regulatory transaction related to an existing dossier for which you do not know the Dossier ID.</li>
+                            <li>Upon completion, the form is auto-sent via email to Health Canada, outside of the regulatory transaction (submission).</li>
+                            <li>Refer to section “2.4 Dossier ID Request Process” of the REP guidance document and the REP Video Tutorial #3 below for details regarding the Dossier ID process.</li>
+                        </ul>
+                    </div>
+                    <div class="row">
+                        <a href="https://www.canada.ca/en/health-canada/services/drugs-health-products/drug-products/applications-submissions/guidance-documents/regulatory-enrolment-process/dossier-id-request-form-biologic-clinical-trial.html">Dossier ID Request Form for Biologic Clinical Trial Dossiers (2020-04-16)</a>
+                        <ul>
+                            <li>Required to obtain a new Dossier ID, when converting a dossier from non-eCTD to eCTD format, or when filing a regulatory transaction related to an existing dossier for which you do not know the Dossier ID.</li>
+                            <li>Upon completion, the form is auto-sent via email to Health Canada, outside of the regulatory transaction (submission).</li>
+                            <li>Refer to section “2.4 Dossier ID Request Process” of the REP guidance document and REP Video Tutorial #3 below for details regarding the Dossier ID process.</li>
+                        </ul>
+                    </div>
+                    <div class="row">
+                        <a href="https://www.canada.ca/en/health-canada/services/drugs-health-products/drug-products/applications-submissions/guidance-documents/regulatory-enrolment-process/dossier-id-request-form-pharmaceutical-clinical-trial.html">Dossier ID Request Form for Pharmaceutical Clinical Trial Dossiers (2020-04-16)</a>
+                        <ul>
+                            <li>Required to obtain a new Dossier ID, when converting a dossier from non-eCTD to eCTD format, or when filing a regulatory transaction for a dossier for which you do not know the Dossier ID.</li>
+                            <li>Upon completion, the form is auto-sent via email the Health Canada, outside of the regulatory transaction (submission).</li>
+                            <li>Refer to section “2.4 Dossier ID Request Process” of the REP guidance document and REP Video Tutorial #3 below for details regarding the Dossier ID process.</li>
+                        </ul>
+                    </div>
+                    <div class="row">
+                        <h2>Within the Regulatory Transaction Process</h2>
+                    </div>
+                    <div class="row">
+                        <a href="./transaction/regulatory-transaction.html#main">Regulatory Transaction Template (VD/CTA V4.0) (2020-06-15)</a>
+                        <ul>
+                            <li>Required with each regulatory transaction filed to Health Canada.</li>
+                            <li>Sent via the CESG within the regulatory transaction (submission).</li>
+                            <li>Refer to section “2.5 Filing of RT and PI” and “2.6.2 Folder Structure” of the REP guidance document, and REP Video Tutorial #4, for detailed descriptions of the requirements for the RT template.</li>
+                        </ul>
+                    </div>
+                    <div class="row">
+                        <a href="./product/product.html#main">Product Information Template (VD/CTA V4.0) (2020-01-30)</a>
+                        <ul>
+                            <li>Required within the initial transaction of specified regulatory activities or when providing changes to the product information in a subsequent transaction for an existing regulatory activity.</li>
+                            <li>Sent via the CESG within the regulatory transaction (submission).</li>
+                            <li>Refer to section “2.5 Filing of RT and PI” and “2.6.2 Folder Structure” of the REP guidance document, and the REP Video Tutorial #4, for detailed descriptions of the requirements for the RT template.</li>
+                        </ul>
+                    </div>
+                </div>
 
-    </div>
-    <!--content ends here -->
-    <div class="row">
-        <div class="datemod col-xs-12 mrgn-tp-lg">
-            <dl id="wb-dtmd">
-                <dt>Date modified: 2020-05-15</dt>
-            </dl>
+                <div>
+                    <div class="row">
+                        <h2>Stylesheet Download Link</h2>
+                    </div>
+                    <div class="row">
+                        <a href="./stylesheet/pharmabio_stylesheets_4_0_en.zip">Download V4.0 stylesheet zip file (English version, 2020-03-20) </a>
+                    </div>
+                </div>
+
+            </div>
+
+            <div>
+                <div class="row">
+                    <h2>Training Material Download Links</h2>
+                </div>
+                <div class="row">
+                    <a href="https://youtu.be/_JsPzq5Dmdo" target="_blank">
+                        REP Video Tutorial #1: Overview </a>
+                </div>
+                <div class="row">
+                    <a href="https://youtu.be/a09eruLX1LM" target="_blank">
+                        REP Video Tutorial #2: Company Template</a>
+                </div>
+                <div class="row">
+                    <a href="https://youtu.be/W9O0ZuY6FtQ" target="_blank">
+                        REP Video Tutorial #3: Dossier ID Request Form</a>
+                </div>
+                <div class="row">
+                    <a href="https://youtu.be/QKiSau4Zpp0" target="_blank">
+                        REP Video Tutorial #4: Regulatory Transaction and Product Information Templates</a>
+                </div>
+            </div>
+            <!--content ends here -->
+
+            <div class="datemod col-xs-12 mrgn-tp-lg">
+                <dl id="wb-dtmd">
+                    <dt>Date modified: 2020-06-22</dt>
+                </dl>
+            </div>
         </div>
     </div>
 </main>
