--- a/mds_index.html
+++ b/mds_index.html
@@ -148,32 +148,56 @@
 
             <div>
                 <div class="row">
-                    <h1 property="name" id="wb-cont"> Regulatory Enrolment Process: Med Device  </h1>
+                    <h1 property="name" id="wb-cont">Regulatory Enrolment Process (REP) for Medical Devices </h1>
                 </div>
                 <div>
                     <div class="row">
-                        <h2> REP Form Links</h2>
+                        <h2>REP Template & Form Links</h2>
                     </div>
                     <div class="row">
-                        <a href="./mds/company/en/index.html#main">Company Enrolment (Last updated: May 12, 2020)</a>
-                    </div>
-                    <!--<div class="row">-->
-                        <!--<a href="https://www.canada.ca/en/health-canada/services/drugs-health-products/drug-products/applications-submissions/guidance-documents/regulatory-enrolment-process/medical-device-dossier-template.html">Dossier Enrolment</a>-->
-                    <!--</div>-->
-                    <div class="row">
-                        <a href="./mds/applicationInfo/en/index.html#main">Application Information (Last updated: May 19, 2020)</a>
+                        <h2>Outside the Regulatory Transaction Process</h2>
                     </div>
                     <div class="row">
-                        <a href="./mds/transaction/en/index.html#main">Regulatory Transaction (Last updated: May 19, 2020)</a>
+                        <a href="./mds/company/en/index.html#main">Company Template (Last updated: May 19, 2020)</a>
+                        <ul>
+                            <li>Required to obtain a company ID and/or provide updated company information to Health Canada.</li>
+                            <li>Sent via the CESG as a separate transaction, outside of the regulatory transaction (application).</li>
+                            <li>Refer to the draft REP guidance document for Medical Devices for detailed descriptions of the requirements for the company template.</li>
+                        </ul>
+                    </div>
+                    <div class="row">
+                        <a href="https://www.canada.ca/en/health-canada/services/drugs-health-products/drug-products/applications-submissions/guidance-documents/filing-submissions-electronically/medical-device-dossier-template.html">Dossier ID Request Form for Medical Devices (Last updated: January 9, 2020)</a>
+                        <ul>
+                            <li>Required to obtain a Dossier ID. </li>
+                            <li>Upon completion, the form is auto-sent via email the Health Canada, outside of the regulatory transaction (application). </li>
+                        </ul>
+                    </div>
+                    <div class="row">
+                        <h2>Within the Regulatory Transaction Process</h2>
+                    </div>
+                    <div class="row">
+                        <a href="./mds/transaction/en/index.html#main">Regulatory Transaction Template (Last updated: Apr 23, 2020)</a>
+                        <ul>
+                            <li>Sent via the CESG in within the regulatory transaction (application).</li>
+                            <li>Required with each regulatory transaction filed to Health Canada.</li>
+                            <li>Refer to the draft REP guidance document for Medical Devices for detailed descriptions of the requirements for the RT template.</li>
+                        </ul>
+                    </div>
+                    <div class="row">
+                        <a href="./mds/applicationInfo/en/index.html#main">Application Information Template (Last updated: May 14, 2020)</a>
+                        <ul>
+                            <li>Sent via the CESG in within a regulatory transaction (application).</li>
+                            <li>Required when filing a new regulatory activity for CTA, CTA-A, Private label or when providing changes to product information in a subsequent transaction for an existing regulatory activity.</li>
+                        </ul>
                     </div>
                 </div>
 
                 <div>
                     <div class="row">
-                        <h2>Stylesheet Download Link</h2>
+                        <h2>Stylesheet Download Links</h2>
                     </div>
                     <div class="row">
-                        <a href="./mds/stylesheet/medicaldevice_stylesheets_en.zip">Download v1.0 and v2.0 stylesheet zip file (Last updated: May 19, 2020) </a>
+                        <a href="./mds/stylesheet/medicaldevice_stylesheets_en.zip">Download v1.0 and v2.0 stylesheet zip files (May 19, 2020) </a>
                     </div>
                 </div>
             </div>
@@ -181,20 +205,20 @@
 
             <div class="datemod col-xs-12 mrgn-tp-lg">
                 <dl id="wb-dtmd">
-                    <dt>Date modified: 2020-05-19</dt>
+                    <dt>Date modified: 2020-06-15</dt>
                 </dl>
             </div>
         </div>
     </div>
 </main>
-<aside class="gc-nttvs container">
-    <h2>Government of Canada activities and initiatives</h2>
+<!--<aside class="gc-nttvs container">-->
+    <!--<h2>Government of Canada activities and initiatives</h2>-->
 
-    <div id="gcwb_prts" class="wb-eqht row wb-init wb-data-ajax-replace-inited wb-eqht-inited"
-         data-ajax-append="https://cdn.canada.ca/gcweb-cdn-live/features/features-en.html">
+    <!--<div id="gcwb_prts" class="wb-eqht row wb-init wb-data-ajax-replace-inited wb-eqht-inited"-->
+         <!--data-ajax-append="https://cdn.canada.ca/gcweb-cdn-live/features/features-en.html">-->
 
-    </div>
-</aside>
+    <!--</div>-->
+<!--</aside>-->
 <footer role="contentinfo" id="wb-info">
     <nav role="navigation" class="container wb-navcurr">
         <h2 class="wb-inv">About government</h2>
