--- a/prod_index.html
+++ b/prod_index.html
@@ -205,20 +205,20 @@
                         <!--</span>-->
                     <!--</div>-->
                 </div>
-                <!--<div>-->
+                <div>
+                    <div class="row">
+                        <h2>Internal User (i.e. HPFB) Links</h2>
+                    </div>
+                    <div class="row">
+                        <a href="./prod_v3/company/companyINT-en.html#main">Company Enrolment -Internal (July 10, 2020, v3.1.2) </a>
+                    </div>
                     <!--<div class="row">-->
-                        <!--<h2>Internal User (i.e. HPFB) Links</h2>-->
+                        <!--<a href="./prod_v3/dossier/dossierINT-en.html#main">Dossier Enrolment Internal (Apr 29, 2019, v2.2.1)</a>-->
                     <!--</div>-->
-                    <!--<div class="row">-->
-                        <!--<a href="./prod_v3/company/companyINT-en.html#main">Company Enrolment -Internal (Jun 15, 2020, v3.1.1 live) </a>-->
-                    <!--</div>-->
-                    <!--&lt;!&ndash;<div class="row">&ndash;&gt;-->
-                        <!--&lt;!&ndash;<a href="./prod_v3/dossier/dossierINT-en.html#main">Dossier Enrolment Internal (Apr 29, 2019, v2.2.1)</a>&ndash;&gt;-->
-                    <!--&lt;!&ndash;</div>&ndash;&gt;-->
-                    <!--<div class="row">-->
-                        <!--<a href="./repDiff/diffForm-en.html">Difference Engine (Jun 17, 2019)</a>-->
-                    <!--</div>-->
-                <!--</div>-->
+                    <div class="row">
+                        <a href="./repDiff/diffForm-en.html">Difference Engine (Jun 17, 2019)</a>
+                    </div>
+                </div>
 
                 <div>
                     <div class="row">
@@ -274,7 +274,7 @@
 
             <div class="datemod col-xs-12 mrgn-tp-lg">
                 <dl id="wb-dtmd">
-                    <dt>Date modified: 2020-06-30</dt>
+                    <dt>Date modified: 2020-07-10</dt>
                 </dl>
             </div>
 </main>
