--- a/merged_index.html
+++ b/merged_index.html
@@ -154,7 +154,10 @@
                         <h2>Regulatory Enrolment Process: Pharma/Bio - Production v4.1</h2>
                     </div>
                     <div class="row">
-                        <a href="./prod_v41_index.html">Pharma/Bio Forms - Production v4.1</a>
+                        <a href="./prod_v41_index.html">Pharma/Bio Forms - Production v4.1 (English)</a>
+                    </div>
+                    <div class="row">
+                        <a href="./prod_v41_index-fr.html">Pharma/Bio Forms - Production v4.1 (French)</a>
                     </div>
                 </div>
 
@@ -184,7 +187,10 @@
                         <a href="./stylesheet/pharmabio_stylesheets_4_0_en.zip">Download V4.0 stylesheet zip file (English version, Mar 20, 2020) </a>
                     </div>
                     <div class="row">
-                        <a href="./stylesheet/pharmabio_stylesheets_en.zip">Download V1.0, V2.0, V3.0 and V4.0 stylesheet zip file (English version, Mar 20, 2020) </a>
+                        <a href="./stylesheet/pharmabio_stylesheets_4_1_en.zip">Download V4.1 stylesheet zip file (English version, Jul 29, 2020) </a>
+                    </div>
+                    <div class="row">
+                        <a href="./stylesheet/pharmabio_stylesheets_en.zip">Download V1.0, V2.0, V3.0, V3.1, V4.0 and V4.1 stylesheet zip file (English version, Jul 29, 2020) </a>
                     </div>
                 </div>
 
