--- a/pilot_v41_index.html
+++ b/pilot_v41_index.html
@@ -237,19 +237,19 @@
                     <h2>Training Material Download Links</h2>
                 </div>
                 <div class="row">
-                    <a href="https://youtu.be/_JsPzq5Dmdo" target="_blank">
+                    <a href="https://youtu.be/_JsPzq5Dmdo" target="_blank" rel="noopener noreferrer">
                         REP Video Tutorial #1: Overview </a>
                 </div>
                 <div class="row">
-                    <a href="https://youtu.be/a09eruLX1LM" target="_blank">
+                    <a href="https://youtu.be/a09eruLX1LM" target="_blank" rel="noopener noreferrer">
                         REP Video Tutorial #2: Company Template</a>
                 </div>
                 <div class="row">
-                    <a href="https://youtu.be/W9O0ZuY6FtQ" target="_blank">
+                    <a href="https://youtu.be/W9O0ZuY6FtQ" target="_blank" rel="noopener noreferrer">
                         REP Video Tutorial #3: Dossier ID Request Form</a>
                 </div>
                 <div class="row">
-                    <a href="https://youtu.be/QKiSau4Zpp0" target="_blank">
+                    <a href="https://youtu.be/QKiSau4Zpp0" target="_blank" rel="noopener noreferrer">
                         REP Video Tutorial #4: Regulatory Transaction and Product Information Templates</a>
                 </div>
             </div>
