--- a/prod_index-fr.html
+++ b/prod_index-fr.html
@@ -229,19 +229,19 @@
                 <h2>Liens de téléchargement du didacticiel vidéo</h2>
             </div>
             <div class="row">
-                <a href="https://youtu.be/UJwHanro80o" target="_blank">
+                <a href="https://youtu.be/UJwHanro80o" target="_blank" rel="noopener noreferrer">
                     Didacticiel vidéo PIR no. 1: Aperçu</a>
             </div>
             <div class="row">
-                <a href="https://youtu.be/VbM8seA9f3Q" target="_blank">
+                <a href="https://youtu.be/VbM8seA9f3Q" target="_blank" rel="noopener noreferrer">
                     Didacticiel vidéo PIR no. 2: Modèle d'entreprise</a>
             </div>
             <div class="row">
-                <a href="https://youtu.be/T6EQ6UA3XDI" target="_blank">
+                <a href="https://youtu.be/T6EQ6UA3XDI" target="_blank" rel="noopener noreferrer">
                     Didacticiel vidéo PIR no. 3: Demande d'ID de dossier</a>
             </div>
             <div class="row">
-                <a href="https://youtu.be/q88jb8TYMtU" target="_blank">
+                <a href="https://youtu.be/q88jb8TYMtU" target="_blank" rel="noopener noreferrer">
                     Didacticiel vidéo PIR no. 4: Modèles de transactions réglementaires et d'information sur le produit</a>
             </div>
         </div>
