--- a/prod_index-fr.html
+++ b/prod_index-fr.html
@@ -151,7 +151,7 @@
                 <h2>En dehors du processus de transaction réglementaire</h2>
             </div>
             <div class="row">
-                <a href="./prod_v3/company/entreprise.html#main">Modèle de l'entreprise (mise à jour juin 2020)</a>
+                <a href="./prod_v3/company/entreprise.html#main">Modèle de l'entreprise (mise à jour août 2020)</a>
                 <ul>
                     <li> Obligatoire pour obtenir un identifiant d'entreprise et / ou fournir des informations à jour sur l'entreprise à Santé Canada.</li>
                     <li> Envoyé via la PCDC en tant que transaction distincte; en dehors de la transaction réglementaire (soumission).</li>
@@ -251,7 +251,7 @@
     <div class="datemod col-xs-12 mrgn-tp-lg">
         <div class="datemod col-xs-12 mrgn-tp-lg">
             <dl id="wb-dtmd">
-                <dt>Date de modification : 2020-06-30</dt>
+                <dt>Date de modification : 2020-08-12</dt>
             </dl>
         </div>
     </div>
