--- a/PROD/company-cr/companyINT-en.html
+++ b/PROD/company-cr/companyINT-en.html
@@ -13,12 +13,12 @@
     <meta name='description' content="Regulatory Enrolment Process Forms"/>
     <meta name="keywords" content="Health, Regulatory Enrolment Process, REP"/>
     <meta name="author" content="Health Canada"/>
-    <meta property="dcterms.title" content="Company Template: Regulatory Enrolment Process - Canada.ca">
-    <meta property="dcterms.creator" content="Government of Canada, Health Canada">
-    <meta property="dcterms.issued" title="W3CDTF" content="2019-01-01">
-    <meta property="dcterms.modified" title="W3CDTF" content="2020-08-12">
-    <meta property="dcterms.subject" title="gccore" content="Drugs; Pharmaceuticals, Health care products; Regulatory Enrolment Process">
-    <meta property="dcterms.language" title="ISO639-2/T" content="eng">
+    <meta property="dcterms.title" content="Company Template: Regulatory Enrolment Process - Canada.ca"/>
+    <meta property="dcterms.creator" content="Government of Canada, Health Canada"/>
+    <meta property="dcterms.issued" title="W3CDTF" content="2019-01-01"/>
+    <meta property="dcterms.modified" title="W3CDTF" content="2020-09-09"/>
+    <meta property="dcterms.subject" title="gccore" content="Drugs; Pharmaceuticals, Health care products; Regulatory Enrolment Process"/>
+    <meta property="dcterms.language" title="ISO639-2/T" content="eng"/>
 
     <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW)
          wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
@@ -54,25 +54,112 @@
                 return 'The form has been updated, do you want to stay on the page?';
             }
             $('.modal-body:first-child').after('<div class="modal-footer"><button type="button" id="ftrClose" class="btn btn-sm btn-primary pull-left overlay-close" style="" title="Close (escape key)">Close<span class="wb-inv">(escape key)</span></button></div>');
+            setTimeout(setupDateFields, 1000);
+            setTimeout(setupDataList, 1000);
+            setTimeout(initialTopExpandCollapse, 1000);
         }
-        function focusOnRow(e) {
-            var myTable = $(e).closest('table');
-            var firstTr = $(myTable).find('tr');
-            if (firstTr.length > 0) {
-                $(firstTr[0]).focus();
+        var maxDateTimes = 8;
+        function setupDateFields(){
+            initialDateInput();
+        }
+        function initialDateInput(){
+            if($( "input[type=date]" ).length == 0 && maxDateTimes > 0) {
+                setTimeout(setupDateFields, 300);
+                maxDateTimes --;
             } else {
-                $(myTable).focus();
+                try {
+                    window.location.href = "#main";
+                    $( "input[type=date]" ).trigger( "wb-init.wb-date" );
+                } catch( err ) {
+                    console.log(err.message);
+                    if(maxDateTimes < 1){
+                        maxDateTimes = 8;
+                    }
+                    setTimeout(setupDateFields, 500);
+                }
             }
+        }
+        var maxDataListTimes = 8;
+        function setupDataList(){
+            initialDataList();
+        }
+        function initialDataList(){
+            if($( "input[type=list]" ).length == 0 && maxDataListTimes > 0) {
+                setTimeout(setupDataList, 200);
+                maxDataListTimes --;
+            } else {
+                $( "input[type=list]" ).trigger( "wb-init.wb-datalist" );
+            }
+        }
+        function initialTopExpandCollapse(){
+            if($("ng-form[name='drugProdCtrl.drugProdForm']").length > 0){
+                $('#expand_collapse_top_btns').removeClass('hide');
+            }
+        }
+        function onchange(e) {
+            console.log(e);
+        }
+        function focusOnRow(e, alter) {
+            var myTable = $(e).closest('table');
+            window.setTimeout(function(){
+                $('html, body').animate({
+                    scrollTop: $(myTable).offset().top + 'px'
+                }, 'fast');
+                var myTr = $(myTable).find('tr').last();
+                if(! $(myTr).attr('id')){
+                    myTr = $(myTr).prev();
+                }
+                var td = $(myTr).find(' > td ').first();
+                if($(td).length < 1){
+                    if(alter != ''){
+                        var parent = $(myTable);
+                        var button = $(parent).find('button[id^=' + alter + ']');
+                        while ($(button).length < 1){
+                            parent = $(parent).parent();
+                            button = $(parent).find('button[id^=' + alter + ']');
+                        }
+                        $(button).focus();
+                    } else {
+                        $(myTable).focus();
+                    }
+                } else {
+                    $(td).focus();
+                }
+            }, 100);
         }
         function focusOnTable(node, idStartWith){
             var myTable = null;
             if(node != null){
-                myTable = $(node).find('table[id^=' + e + ']')[0];
+                myTable = $(node).closest('tr').find('table[id^=' + idStartWith + ']')[0];
             }
             if(myTable != null){
-                alert($(myTable).attr('id'));
-                $(myTable).focus();
+                $('html, body').animate({
+                    scrollTop: $(myTable).offset().top + 'px'
+                }, 'fast');
+                window.setTimeout(function() {
+                    var myTr = $(myTable).find('> tbody > tr').last();
+                    var myTrId = $(myTr).attr('id');
+                    if(! myTrId || myTrId == ''){
+                        myTr = $(myTr).prev();
+                    }
+                    var myTd = $(myTr).find(' > td ').first();
+                    $(myTd).focus();
+                }, 100);
             }
+        }
+        function focusOnProvince(e){
+                var node = $(e).parent().parent().parent().next();
+
+            window.setTimeout(function() {
+                var id = $(node).find('[id^="province_"],[id^="state_"],[id^="proveState_"]').attr('id');
+                $('#' + id).focus();
+            }, 200);
+        }
+        function expandAll(theClass){
+            $('.' + theClass).filter(function(){return ! $(this).attr('open')}).attr('open','open');
+        }
+        function collapseAll(theClass){
+            $('.' + theClass).filter(function(){return $(this).attr('open')}).removeAttr('open');
         }
     </script>
 </head>
@@ -107,12 +194,12 @@
 
     <div class="row">
         <div class="col-md-12">
-            <h1 property="name" id="wb-cont">Company Template: Regulatory Enrolment Process (REP)<br>(Version 3.1.0)</h1>
+            <h1 property="name" id="wb-cont">Company Template: Regulatory Enrolment Process (REP)<br>(Version 4.1.0)</h1>
             <p class="pagetag">
                 <strong>From <a href="https://www.canada.ca/en/health-canada.html">Health Canada</a></strong>
             </p>
         </div>
-        <div class=" col-md-12 module-table-contents">
+        <div class=" col-md-12 module-table-contents" id="content_table">
             <section class="panel panel-default">
                 <header class="panel-heading clearfix">
                     <h2  class="panel-title">Table of contents</h2>
@@ -130,11 +217,11 @@
 
     </div>
     <!-- the main content -->
-        <!-- inject:mainContent-->
-        <div id="app-root" data-ng-app="companyApp" data-ng-controller="MainController as ctrl">
+    <!-- inject:mainContent-->
+    <div id="app-root" data-ng-app="companyApp" data-ng-controller="MainController as ctrl">
     <cmp-company-main form-type="{{ctrl.formType}}"></cmp-company-main>
 </div>
-        <!-- endinject-->
+    <!-- endinject-->
     <!-- end main content -->
 
     <!--content ends here -->
@@ -149,7 +236,7 @@
         var defPreFooter = document.getElementById("def-preFooter");
         defPreFooter.outerHTML = wet.builder.preFooter({
             cdnEnv: "prod",
-            dateModified: "2020-08-12"
+            dateModified: "2020-09-09"
         });
     </script>
 </main>
@@ -189,7 +276,7 @@
 
 <script src="app/lib/angular-aria.min.js"></script>
 
-<script src="app/scripts/companyAppINT-en_20200812_1036.min.js"></script>
+<script src="app/scripts/companyAppINT-en_20200909_1525.min.js"></script>
 
 <!-- endinject -->
 <!-- thirdParty:js  -->
