Update CO french words and home page.

--- a/prod_v41_index-fr.html
+++ b/prod_v41_index-fr.html
@@ -160,7 +160,7 @@
             </div>
             <br>
             <div class="row">
-                <a href="https://www.canada.ca/fr/sante-canada/services/medicaments-produits-sante/medicaments/demandes-presentations/lignes-directrices/depot-soumissions-electroniques/modele-dossier-pharmaceutique.html">Formulaire de demande pour les ID de dossiers (mise à jour fév. 2020</a>
+                <a href="https://www.canada.ca/fr/sante-canada/services/medicaments-produits-sante/medicaments/demandes-presentations/lignes-directrices/depot-soumissions-electroniques/modele-dossier-pharmaceutique.html">Formulaire de demande pour les ID de dossiers</a>
                 <ul>
                     <li> Obligation d'obtenir un ID de dossier, avant de déposer une transaction réglementaire pour un nouveau dossier, lors de la conversion d'un dossier d'un format non-eCTD au format eCTD, ou lors du dépôt d'une transaction réglementaire pour un dossier dont vous ne connaissez pas l'ID de dossier.</li>
                     <li> Une fois rempli, le formulaire est envoyé automatiquement par courriel à Santé Canada, en dehors de la transaction réglementaire (soumission).</li>
@@ -251,7 +251,7 @@
     <div class="datemod col-xs-12 mrgn-tp-lg">
         <div class="datemod col-xs-12 mrgn-tp-lg">
             <dl id="wb-dtmd">
-                <dt>Date de modification : 2020-09-10</dt>
+                <dt>Date de modification : 2020-09-11</dt>
             </dl>
         </div>
     </div>
