--- a/prod_v41_index.html
+++ b/prod_v41_index.html
@@ -162,7 +162,7 @@
                         </ul>
                     </div>
                     <div class="row">
-                        <a href="https://www.canada.ca/en/health-canada/services/drugs-health-products/drug-products/applications-submissions/guidance-documents/filing-submissions-electronically/pharmaceutical-dossier-template.html">Dossier ID Request Form (updated February 2020)</a>
+                        <a href="https://www.canada.ca/en/health-canada/services/drugs-health-products/drug-products/applications-submissions/guidance-documents/filing-submissions-electronically/pharmaceutical-dossier-template.html">Dossier ID Request Form</a>
                         <ul>
                             <li> Required to obtain a Dossier ID, prior to filing a regulatory transaction for a new dossier, when converting a dossier from non-eCTD to eCTD format, or when filing a regulatory transaction for a dossier for which you do not know the Dossier ID.</li>
                             <li> Upon completion, the form is auto-sent via email the Health Canada, outside of the regulatory transaction (submission).</li>
@@ -181,7 +181,7 @@
                         </ul>
                     </div>
                     <div class="row">
-                        <a href="./prod_v4/product/product.html">Product Information (PI) Template (updated 2020-09-10)</a>
+                        <a href="./prod_v4/product/product.html">Product Information (PI) Template (updated 2020-09-08)</a>
                         <ul>
                             <li> Required when filing a new regulatory activity for an NDS, SNDS, ANDS, SANDS, NC, DIN (all types), or PDC, or in a subsequent transaction for an existing regulatory activity.</li>
                             <li> Sent via the CESG in folder 1.2.1 of the regulatory transaction (when provided).</li>
@@ -210,7 +210,7 @@
                         <h2>Internal User (i.e. HPFB) Links</h2>
                     </div>
                     <div class="row">
-                        <a href="./prod_v4/company/companyINT-en.html">Company Enrolment -Internal (2020-09-04, v4.1) </a>
+                        <a href="./prod_v4/company/companyINT-en.html">Company Enrolment -Internal (2020-09-11, v4.1) </a>
                     </div>
                     <!--<div class="row">-->
                         <!--<a href="./prod_v3/dossier/dossierINT-en.html#main">Dossier Enrolment Internal (Apr 29, 2019, v2.2.1)</a>-->
@@ -274,7 +274,7 @@
 
             <div class="datemod col-xs-12 mrgn-tp-lg">
                 <dl id="wb-dtmd">
-                    <dt>Date modified: 2020-09-10</dt>
+                    <dt>Date modified: 2020-09-11</dt>
                 </dl>
             </div>
 </main>
