Update CO french words and home page.

--- a/pilot_v41_index.html
+++ b/pilot_v41_index.html
@@ -158,7 +158,7 @@
                         <h2>Outside the Regulatory Transaction Process</h2>
                     </div>
                     <div class="row">
-                        <a href="./pilot/company/company.html">Company Template (VD/CTA V4.1) (2020-09-04)</a>
+                        <a href="./pilot/company/company.html">Company Template (VD/CTA V4.1) (2020-09-11)</a>
                         <ul>
                             <li>Sent via the CESG as a separate transaction, outside of the regulatory transaction (submission).</li>
                             <li>Required to obtain a company ID and/or provide updated company information to Health Canada.</li>
@@ -166,7 +166,7 @@
                         </ul>
                     </div>
                     <div class="row">
-                        <a href="https://www.canada.ca/en/health-canada/services/drugs-health-products/drug-products/applications-submissions/guidance-documents/regulatory-enrolment-process/veterinary-dossier-template.html">Dossier ID Request Form for Veterinary Drugs (2020-02-10)</a>
+                        <a href="https://www.canada.ca/en/health-canada/services/drugs-health-products/drug-products/applications-submissions/guidance-documents/regulatory-enrolment-process/veterinary-dossier-template.html">Dossier ID Request Form for Veterinary Drugs</a>
                         <ul>
                             <li>Required to obtain a new Dossier ID, or when filing a regulatory transaction related to an existing dossier for which you do not know the Dossier ID.</li>
                             <li>Upon completion, the form is auto-sent via email to Health Canada, outside of the regulatory transaction (submission).</li>
@@ -174,7 +174,7 @@
                         </ul>
                     </div>
                     <div class="row">
-                        <a href="https://www.canada.ca/en/health-canada/services/drugs-health-products/drug-products/applications-submissions/guidance-documents/regulatory-enrolment-process/dossier-id-request-form-biologic-clinical-trial.html">Dossier ID Request Form for Biologic Clinical Trial Dossiers (2020-04-16)</a>
+                        <a href="https://www.canada.ca/en/health-canada/services/drugs-health-products/drug-products/applications-submissions/guidance-documents/regulatory-enrolment-process/dossier-id-request-form-biologic-clinical-trial.html">Dossier ID Request Form for Biologic Clinical Trial Dossiers</a>
                         <ul>
                             <li>Required to obtain a new Dossier ID, when converting a dossier from non-eCTD to eCTD format, or when filing a regulatory transaction related to an existing dossier for which you do not know the Dossier ID.</li>
                             <li>Upon completion, the form is auto-sent via email to Health Canada, outside of the regulatory transaction (submission).</li>
@@ -182,7 +182,7 @@
                         </ul>
                     </div>
                     <div class="row">
-                        <a href="https://www.canada.ca/en/health-canada/services/drugs-health-products/drug-products/applications-submissions/guidance-documents/regulatory-enrolment-process/dossier-id-request-form-pharmaceutical-clinical-trial.html">Dossier ID Request Form for Pharmaceutical Clinical Trial Dossiers (2020-04-16)</a>
+                        <a href="https://www.canada.ca/en/health-canada/services/drugs-health-products/drug-products/applications-submissions/guidance-documents/regulatory-enrolment-process/dossier-id-request-form-pharmaceutical-clinical-trial.html">Dossier ID Request Form for Pharmaceutical Clinical Trial Dossiers</a>
                         <ul>
                             <li>Required to obtain a new Dossier ID, when converting a dossier from non-eCTD to eCTD format, or when filing a regulatory transaction for a dossier for which you do not know the Dossier ID.</li>
                             <li>Upon completion, the form is auto-sent via email the Health Canada, outside of the regulatory transaction (submission).</li>
@@ -257,7 +257,7 @@
 
             <div class="datemod col-xs-12 mrgn-tp-lg">
                 <dl id="wb-dtmd">
-                    <dt>Date modified: 2020-09-08</dt>
+                    <dt>Date modified: 2020-09-11</dt>
                 </dl>
             </div>
         </div>
