Update the stylesheet zip file according to client request.

--- a/prod_v41_index-fr.html
+++ b/prod_v41_index-fr.html
@@ -220,7 +220,7 @@
                 <!--<a href="./stylesheet/pharmabio_stylesheets_3_1_fr.zip">Download V3.1 stylesheet zip file (French version, Feb 27, 2020) </a>-->
             <!--</div>-->
             <div class="row">
-                <a href="./stylesheet/pharmabio_stylesheets_fr.zip">Télécharger le fichier zip des feuilles de style V3.0, V3.1 et V4.1 (mise à jour septembre 2020) </a>
+                <a href="./prod_v4/stylesheet/pharmabio_stylesheets_fr.zip">Télécharger le fichier zip des feuilles de style V3.0, V3.1, et V4.1 (mise à jour septembre 2020) </a>
             </div>
         </div>
 
