--- a/prod_v41_index.html
+++ b/prod_v41_index.html
@@ -234,7 +234,7 @@
                         <!--<a href="./stylesheet/pharmabio_stylesheets_3_1_fr.zip">Download V3.1 stylesheet zip file (French version, Jun 02, 2020) </a>-->
                     <!--</div>-->
                     <div class="row">
-                        <a href="./prod_v4/stylesheet/pharmabio_stylesheets_en.zip">Download V1.0, V2.0, V3.0, V3.1 and V4.1 stylesheet zip file (Updated 2020-09-17) </a>
+                        <a href="./prod_v4/stylesheet/pharmabio_stylesheets_en.zip">Download V3.0, V3.1, V4.0 and V4.1 stylesheet zip file (Updated 2020-09-17) </a>
                     </div>
                 </div>
 
