--- a/pilot_v41_index.html
+++ b/pilot_v41_index.html
@@ -226,7 +226,7 @@
                         <h2>Stylesheet Download Link</h2>
                     </div>
                     <div class="row">
-                        <a href="./stylesheet/pharmabio_stylesheets_en.zip">Download V4.1 stylesheet zip file (English version, 2020-09-17) </a>
+                        <a href="./stylesheet/pharmabio_stylesheets_en.zip">Download V2.0, v2.2, V3.0, V3.1, V4.0 and V4.1 stylesheet zip file (English version, Sep 17, 2020) </a>
                     </div>
                 </div>
 
