--- a/prod_v41_index.html
+++ b/prod_v41_index.html
@@ -216,7 +216,7 @@
                         <!--<a href="./prod_v3/dossier/dossierINT-en.html#main">Dossier Enrolment Internal (Apr 29, 2019, v2.2.1)</a>-->
                     <!--</div>-->
                     <div class="row">
-                        <a href="./repDiff/diffForm-en.html">Difference Engine (Jun 17, 2019)</a>
+                        <a href="./pilot/repDiff/diffForm-en.html">Difference Engine (Sep 18, 2020)</a>
                     </div>
                 </div>
 
