--- a/pilot_v41_index.html
+++ b/pilot_v41_index.html
@@ -217,7 +217,7 @@
                         <a href="./pilot/company/companyINT-en.html#main">Company Enrolment -Internal (2020-09-04, v4.1) </a>
                     </div>
                     <div class="row">
-                        <a href="./pilot/repDiff/diffForm-en.html">Difference Engine (Sep 18, 2020)</a></a>
+                        <a href="./pilot/repDiff/diffForm-en.html">Difference Engine (Sep 18, 2020)</a>
                     </div>
                 </div>
 
