Fix the comparision tool broken caused by the WET not be updated issue.

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                 <!--<a href="./dossier/dossierINT-en.html">Dossier Enrolment - Internal (Deployed April 11, 2019)</a>-->
             <!--</div>-->
             <div class="row">
-                <a href="./repDiff/diffForm-en.html">Comparison tool  (Deployed July 31, 2019)</a>
+                <a href="./PROD/repDiff/diffForm-en.html">Comparison tool  (Deployed September 18, 2020)</a>
             </div>
         </div>
     </div>
