--- a/vdct_index.html
+++ b/vdct_index.html
@@ -168,7 +168,7 @@
                         </ul>
                     </div>
                     <div class="row">
-                        <a href="https://www.canada.ca/en/health-canada/services/drugs-health-products/drug-products/applications-submissions/guidance-documents/regulatory-enrolment-process/veterinary-dossier-template.html">Dossier ID Request Form for Veterinary Drugs (2020-02-10)</a>
+                        <a href="https://www.canada.ca/en/health-canada/services/drugs-health-products/drug-products/applications-submissions/guidance-documents/regulatory-enrolment-process/veterinary-dossier-template.html">Dossier ID Request Form for Veterinary Drugs</a>
                         <ul>
                             <li>Required to obtain a new Dossier ID, or when filing a regulatory transaction related to an existing dossier for which you do not know the Dossier ID.</li>
                             <li>Upon completion, the form is auto-sent via email to Health Canada, outside of the regulatory transaction (submission).</li>
@@ -176,7 +176,7 @@
                         </ul>
                     </div>
                     <div class="row">
-                        <a href="https://www.canada.ca/en/health-canada/services/drugs-health-products/drug-products/applications-submissions/guidance-documents/regulatory-enrolment-process/dossier-id-request-form-biologic-clinical-trial.html">Dossier ID Request Form for Biologic Clinical Trial Dossiers (2020-04-16)</a>
+                        <a href="https://www.canada.ca/en/health-canada/services/drugs-health-products/drug-products/applications-submissions/guidance-documents/regulatory-enrolment-process/dossier-id-request-form-biologic-clinical-trial.html">Dossier ID Request Form for Biologic Clinical Trial Dossiers</a>
                         <ul>
                             <li>Required to obtain a new Dossier ID, when converting a dossier from non-eCTD to eCTD format, or when filing a regulatory transaction related to an existing dossier for which you do not know the Dossier ID.</li>
                             <li>Upon completion, the form is auto-sent via email to Health Canada, outside of the regulatory transaction (submission).</li>
@@ -184,7 +184,7 @@
                         </ul>
                     </div>
                     <div class="row">
-                        <a href="https://www.canada.ca/en/health-canada/services/drugs-health-products/drug-products/applications-submissions/guidance-documents/regulatory-enrolment-process/dossier-id-request-form-pharmaceutical-clinical-trial.html">Dossier ID Request Form for Pharmaceutical Clinical Trial Dossiers (2020-04-16)</a>
+                        <a href="https://www.canada.ca/en/health-canada/services/drugs-health-products/drug-products/applications-submissions/guidance-documents/regulatory-enrolment-process/dossier-id-request-form-pharmaceutical-clinical-trial.html">Dossier ID Request Form for Pharmaceutical Clinical Trial Dossiers</a>
                         <ul>
                             <li>Required to obtain a new Dossier ID, when converting a dossier from non-eCTD to eCTD format, or when filing a regulatory transaction for a dossier for which you do not know the Dossier ID.</li>
                             <li>Upon completion, the form is auto-sent via email the Health Canada, outside of the regulatory transaction (submission).</li>
@@ -217,7 +217,7 @@
                         <h2>Stylesheet Download Link</h2>
                     </div>
                     <div class="row">
-                        <a href="./stylesheet/pharmabio_stylesheets_en.zip">Download V2.0, v2.2, V3.0, V3.1, V4.0 and V4.1 stylesheet zip file (English version, Sep 18, 2020) </a>
+                        <a href="./stylesheet/pharmabio_stylesheets_en.zip">Download V2.0, v2.2, V3.0, V3.1, V4.0 and V4.1 stylesheet zip file (English version, Sep 30, 2020) </a>
                     </div>
                 </div>
 
@@ -248,7 +248,7 @@
 
             <div class="datemod col-xs-12 mrgn-tp-lg">
                 <dl id="wb-dtmd">
-                    <dt>Date modified: 2020-09-18</dt>
+                    <dt>Date modified: 2020-09-30</dt>
                 </dl>
             </div>
         </div>
