ADR1679-2021 change: text changes and remove the Brexit links.

--- a/certificate/formulaire-certificat-protection-supplementaire-internal.html
+++ b/certificate/formulaire-certificat-protection-supplementaire-internal.html
@@ -120,7 +120,7 @@
         var defPreFooter=document.getElementById("def-preFooter");
         defPreFooter.outerHTML=wet.builder.preFooter({
             cdnEnv:"prod",
-            dateModified:"2020-03-27",
+            dateModified:"2020-12-15",
             showShare:true,
             showFeedback:true
         })
@@ -161,7 +161,59 @@
 
 <script src="app/lib/angular-aria.min.js"></script>
 
-<script src="app/scripts/cspAppINT-fr_20200327_1445.min.js"></script>
+<script src="app/scripts/translations_20201215_0902.js"></script>
+
+<script src="app/scripts/cspAppINT-fr.js"></script>
+
+<script src="app/scripts/services/hpfb-constants.js"></script>
+
+<script src="app/scripts/services/filter-lists.js"></script>
+
+<script src="app/scripts/services/data-lists.js"></script>
+
+<script src="app/scripts/services/data-lists.activity.js"></script>
+
+<script src="app/scripts/services/csp-service.js"></script>
+
+<script src="app/scripts/services/csp-load-service.js"></script>
+
+<script src="app/scripts/services/csp-data-lists.js"></script>
+
+<script src="app/scripts/services/csp-constants.js"></script>
+
+<script src="app/scripts/services/application-info-service.js"></script>
+
+<script src="app/scripts/directives/numberOnly/only-digits.js"></script>
+
+<script src="app/scripts/components/fileIO/FileIO.hpfbFileReader.js"></script>
+
+<script src="app/scripts/components/error-summary/cmp-error-summary.js"></script>
+
+<script src="app/scripts/components/error-message/cmp-error-message.js"></script>
+
+<script src="app/scripts/components/cspTimelySubmission/cmp-csp-timely-submission.js"></script>
+
+<script src="app/scripts/components/cspPatent/cmp-csp-patent.js"></script>
+
+<script src="app/scripts/components/cspMainAppl/cmp-csp-main-application.js"></script>
+
+<script src="app/scripts/components/cspMain/cmp-csp-main.js"></script>
+
+<script src="app/scripts/components/cspHealthCanadaOnly/cmp-csp-hc-only.js"></script>
+
+<script src="app/scripts/components/cspFeePayment/cmp-csp-fee-payment.js"></script>
+
+<script src="app/scripts/components/cspContactRecord/cmp-csp-applicant.js"></script>
+
+<script src="app/scripts/components/cspContactList/cmp-csp-applicant-list.js"></script>
+
+<script src="app/scripts/components/cspCertification/cmp-csp-certification.js"></script>
+
+<script src="app/scripts/components/contactDetails/cmp-contact-details.js"></script>
+
+<script src="app/scripts/components/addressDetails/cmp-address-details.js"></script>
+
+<script src="app/scripts/components/alertComponent/cmp-alert.js"></script>
 
 <!-- endinject -->
 <!-- thirdParty:js  -->
