rename URLs and update index page

--- a/index.html
+++ b/index.html
@@ -150,22 +150,39 @@
 
         <div>
             <div class="row">
-                <h2>New CSP Form (Start to use on January 2019) - Non-brexit Version B </h2>
+                <h2>New CSP Form (Start to use on January 2021) - Non-brexit Version B </h2>
             </div>
             <div class="row">
-                <a href="./certificate/certificate-supplementary-protection-form-2020-2021.html">CSP Form English-External (Dec 15, 2020)</a>
+                <a href="./certificate/certificate-supplementary-protection-form-2021.html">CSP Form English-External (Dec 15, 2020)</a>
             </div>
             <div class="row">
                 <a href="./certificate/certificate-supplementary-protection-form-internal.html">CSP Form English-Internal (Dec 15, 2020)</a>
             </div>
             <div class="row">
-                <a href="./certificate/formulaire-certificat-protection-supplementaire-2020-2021.html">CSP Form French-External (Dec 15, 2020)</a>
+                <a href="./certificate/formulaire-certificat-protection-supplementaire-2021.html">CSP Form French-External (Dec 15, 2020)</a>
             </div>
             <div class="row">
                 <a href="./certificate/formulaire-certificat-protection-supplementaire-internal.html">CSP Form French-Internal (Dec 15, 2020)</a>
             </div>
         </div>
 
+        <div>
+            <div class="row">
+                <h2>Old CSP Form (used from March 2020 to December 2020) - Non-brexit Version B </h2>
+            </div>
+            <div class="row">
+                <a href="./certificate2020/certificate-supplementary-protection-form-2020.html">CSP Form English-External (Mar 27, 2020)</a>
+            </div>
+            <div class="row">
+                <a href="./certificate2020/certificate-supplementary-protection-form-internal.html">CSP Form English-Internal (Mar 27, 2020)</a>
+            </div>
+            <div class="row">
+                <a href="./certificate2020/formulaire-certificat-protection-supplementaire-2020.html">CSP Form French-External (Mar 27, 2020)</a>
+            </div>
+            <div class="row">
+                <a href="./certificate2020/formulaire-certificat-protection-supplementaire-internal.html">CSP Form French-Internal (Mar 27, 2020)</a>
+            </div>
+        </div>
         <!--<div>-->
             <!--<div class="row">-->
                 <!--<h2>New CSP Form (Start to use on January 2019) - Brexit Version A </h2>-->
