--- a/certificate/formulaire-certificat-protection-supplementaire-2021.html
+++ b/certificate/formulaire-certificat-protection-supplementaire-2021.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html><!--[if lt IE 9]>
-<html class="no-js lt-ie9" lang="en" dir="ltr"><![endif]--><!--[if gt IE 8]><!-->
-<html class="no-js" lang="en" dir="ltr">
+<html class="no-js lt-ie9" lang="fr" dir="ltr"><![endif]--><!--[if gt IE 8]><!-->
+<html class="no-js" lang="fr" dir="ltr">
 <!--<![endif]-->
 <head>
-
-    <script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/rn/cdts/compiled/wet-en.js"></script>
+    <script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/rn/cdts/compiled/wet-fr.js"></script>
     <script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/rn/cdts/compiled/soyutils.js"></script>
     <script type="text/javascript">
         document.write(wet.builder.refTop({
@@ -12,13 +11,12 @@
         }));
     </script>
 
-
     <noscript>
         <!--Write closure fall-back static file -->
-        <!-- /ROOT/cdts/static/top-en.html-->
-            <!-- /ROOT/etc/designs/canada/cdts/gcweb/v4_0_27/cdts/static/transactTop-en.html-->
-            <!-- #include virtual="/etc/designs/canada/cdts/gcweb/v4_0_27/cdts/static/transactTop-en.html"-->
-            <!-- #include virtual="/cdts/static/top-en.html"-->
+        <!-- /ROOT/cdts/static/top-fr.html-->
+        <!-- /ROOT/etc/designs/canada/cdts/gcweb/v4_0_27/cdts/static/transactTop-fr.html-->
+        <!-- #include virtual="/etc/designs/canada/cdts/gcweb/v4_0_27/cdts/static/transactTop-fr.html"-->
+        <!-- #include virtual="/cdts/static/top-fr.html"-->
     </noscript>
 
     <meta charset="utf-8">
@@ -26,11 +24,11 @@
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate"/>
     <meta http-equiv="Pragma" content="no-cache"/>
     <meta http-equiv="Expires" content="-1"/>
-    <title>Health Canada Certificate of Supplementary Protection Application Form</title>
+
+    <title>Formulaire de demande de certificat de protection supplémentaire de Santé Canada</title>
     <meta content="width=device-width,initial-scale=1" name="viewport">
     <!-- Meta data -->
-    <meta name="description"
-          content="REP Forms">
+    <meta name="description" content="REP Forms">
     <!-- Meta data-->
     <!--[if gte IE 9 | !IE ]><!-->
     <link href="./../GCWeb/assets/favicon.ico" rel="icon" type="image/x-icon">
@@ -42,18 +40,13 @@
     <link rel="stylesheet" href="./../GCWeb/css/ie8-theme.min.css"/>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="./../wet-boew/js/ie8-wet-boew.min.js"></script>
-
-
-    <noscript>
-    </noscript>
-
     <![endif]-->
     <!--[if lte IE 9]>
 
 
     <![endif]-->
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
-
+    <!--<link rel="stylesheet" href="./app/styles/rep.css ">-->
     <!-- inject:css -->
     <link rel="stylesheet" href="app/styles/rep.css">
     <link rel="stylesheet" href="app/styles/select.min.css">
@@ -83,38 +76,34 @@
 <!-- End Google Tag Manager -->
 <ul id="wb-tphp">
     <li class="wb-slc">
-        <a class="wb-sl" href="#wb-cont">Skip to main content</a>
+        <a class="wb-sl" href="#wb-cont">Passer au contenu principal</a>
     </li>
     <li class="wb-slc visible-sm visible-md visible-lg">
-        <a class="wb-sl" href="#wb-info">Skip to "About this site"</a>
+        <a class="wb-sl" href="#wb-info">Passer à «&#160;À propos de ce site&#160;»</a>
     </li>
 </ul>
-
 <div id="def-top">
 </div>
 <script type="text/javascript">
     var defTop=document.getElementById("def-top");
     defTop.outerHTML=wet.builder.top({
         cdnEnv:"prod",
-        breadcrumbs: [{title: "Home", href: "https://www.canada.ca/en/health-canada/services/drugs-health-products/drug-products/applications-submissions/guidance-documents/register-certificates.html"}],
-        search: true,
+        breadcrumbs: [{title: "Accueil", href: "https://www.canada.ca/fr/sante-canada/services/medicaments-produits-sante/medicaments/demandes-presentations/lignes-directrices/registre-certificats.html"}],
         lngLinks:[{
-            lang: "fr",
-            href: "formulaire-certificat-protection-supplementaire-2020-2021.html",
-            text: "Francais"
-        }],
-
+            lang:"en",
+            href:"certificate-supplementary-protection-form-2021.html",
+            text:"English"
+        }]
     })
 </script>
 <main role="main" property="mainContentOfPage" class="container">
 
     <!--content starts here -->
     <div>
-        <h1 property="name" id="wb-cont">Certificate of Supplementary Protection (CSP) Application Form</h1>
+        <h1 property="name" id="wb-cont">Formulaire de demande de certificat de protection supplémentaire (CPS)</h1>
         <noscript>
-            <h2>JavaScript is required to complete this form</h2>
+            <h2>JavaScript doit être activé pour remplir ce formulaire</h2>
         </noscript>
-
         <!-- inject:mainContent-->
         <div id="app-root" ng-app="cspApp" ng-controller="MainController as ctrl">
     <cmp-csp-main  form-type="{{ctrl.formType}}">
@@ -123,11 +112,9 @@
 </div>
         <!-- endinject-->
 
-
     </div>
     <!--content ends here -->
     <div id="def-preFooter">
-
     </div>
     <script type="text/javascript">
         var defPreFooter=document.getElementById("def-preFooter");
@@ -138,11 +125,9 @@
             showFeedback:true
         })
     </script>
-
 </main>
-<div id="def-footer">
-    <!--Write closure fall-back static file -->
-    <!-- #include virtual="/cdts/static/footer-en.html"-->
+<div id="def-footer">   <!--Write closure fall-back static file -->
+    <!-- #include virtual="/cdts/static/footer-fr.html"-->
 </div>
 <script type="text/javascript">
     var defFooter=document.getElementById("def-footer");
@@ -150,9 +135,6 @@
         cdnEnv:"prod"
     })
 </script>
-
-
-
 <!--[if gte IE 9 | !IE ]><!-->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.js"></script>
 <script src="./../wet-boew/js/wet-boew.min.js"></script>
@@ -162,6 +144,7 @@
 
 <![endif]-->
 <script src="./../GCWeb/js/theme.min.js"></script>
+
 <!--Start add custom scripts here-->
 
 <!-- inject:js -->
@@ -180,7 +163,7 @@
 
 <script src="app/scripts/translations_20201215_0902.js"></script>
 
-<script src="app/scripts/cspAppEXT-en.js"></script>
+<script src="app/scripts/cspAppEXT-fr.js"></script>
 
 <script src="app/scripts/services/hpfb-constants.js"></script>
 
@@ -246,7 +229,6 @@
 <script src="app/lib/xml2json.js"></script>
 
 <!-- endinject -->
-
 
 </body>
 </html>
