CO v4.2.0 deployment for WCAG. Add index page

--- a/index.html
+++ b/index.html
@@ -249,6 +249,15 @@
                     </div>
                 </div>
 
+                <div>
+                    <div class="row">
+                        <h2>Regulatory Enrolment Process: Pharma/Bio - IOTranscation V4.2</h2>
+                    </div>
+                    <div class="row">
+                        <a href="./io_index.html">Pharma/Bio Forms - IOTranscation V4.2</a>
+                    </div>
+                </div>
+
             </div>
 
             <div>
