Fix an WET updating related issue. Redeploy PI to WCAG testing. Deploy CO template & stylesheet to DEV Prod, Pilot for client testing.

--- a/prod_v42_index-fr.html
+++ b/prod_v42_index-fr.html
@@ -183,7 +183,8 @@
                 </ul>
             </div>
             <div class="row">
-                <a href="./prod_v42_wcag/product/produit.html#main">Modèle d'information sur le produit (IP) (mise à jour 09/06/2020)</a>
+                <a href="./prod_v3/product/produit.html#main">Modèle d'information sur le produit (IP) (mise à jour 09/06/2020)</a>
+                <!--<a href="./prod_v42_wcag/product/produit.html#main">Modèle d'information sur le produit (IP) (mise à jour 09/06/2020)</a>-->
                 <ul>
                     <li> Obligatoire lors du dépôt d'une nouvelle activité réglementaire pour un PDN, SPDN, PADN, SPADN, PM, DDIN (tous types) ou CPA, ou lors d'une transaction ultérieure pour une activité réglementaire existante.</li>
                     <li> Envoyé via la PCDE dans le dossier 1.2.1 de la transaction réglementaire (si fourni).</li>
