--- a/prod_v42_index.html
+++ b/prod_v42_index.html
@@ -180,14 +180,15 @@
                     <li> Refer to section “2.5 Regulatory Transaction Filing Process” and “3.2 Folder Structure” of the REP guidance document, and REP Video Tutorial #4, for detailed descriptions of the requirements for the RT and PI templates.</li>
                 </ul>
             </div>
-            <!--<div class="row">-->
-                <!--<a href="./prod_v42_wcag/product/product.html">Product Information (PI) Template (updated 2021-02-16)</a>-->
-                <!--<ul>-->
-                    <!--<li> Required when filing a new regulatory activity for an NDS, SNDS, ANDS, SANDS, NC, DIN (all types), or PDC, or in a subsequent transaction for an existing regulatory activity.</li>-->
-                    <!--<li> Sent via the CESG in folder 1.2.1 of the regulatory transaction (when provided).</li>-->
-                    <!--<li> Refer to sections “2.5 Regulatory Transaction Filing Process” and “3.2 Folder Structure” of the REP guidance document, and REP Video Tutorial #4, for detailed descriptions of the requirements for the RT and PI templates.</li>-->
-                <!--</ul>-->
-            <!--</div>-->
+            <div class="row">
+                <a href="./prod_v4/product/product.html">Product Information (PI) Template (updated 2020-09-29)</a>
+                <!--<a href="./prod_v4_wcag/product/product.html">Product Information (PI) Template (updated 2020-09-29)</a>-->
+                <ul>
+                    <li> Required when filing a new regulatory activity for an NDS, SNDS, ANDS, SANDS, NC, DIN (all types), or PDC, or in a subsequent transaction for an existing regulatory activity.</li>
+                    <li> Sent via the CESG in folder 1.2.1 of the regulatory transaction (when provided).</li>
+                    <li> Refer to sections “2.5 Regulatory Transaction Filing Process” and “3.2 Folder Structure” of the REP guidance document, and REP Video Tutorial #4, for detailed descriptions of the requirements for the RT and PI templates.</li>
+                </ul>
+            </div>
             <!--<div class="row">-->
             <!--<a href="./prod_v3/converter/converter.html#main">Product Information Template Data Converter: Version 2 to Version 3 - External (Aug 14, 2019, v3.0.4)</a>-->
             <!--</div>-->
